@@ -30,8 +30,8 @@
 \tabular{ll}{
 Package: \tab maxlike\cr
 Type: \tab Package\cr
-Version: \tab 0.1-1\cr
-Date: \tab 2012-02-27\cr
+Version: \tab 0.1-2\cr
+Date: \tab 2012-12-21\cr
 License: \tab GPL (>=3) \cr
 LazyLoad: \tab yes\cr
 }
